panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__deref__test_deref_of_non_pointer.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/deref/test_deref_of_non_pointer.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/deref/test_deref_of_non_pointer.c"
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (declaration a~2 `int` 42)
         (expression (assign (deref (name a~2 `int`)) 2))
         (expression (deref 42))
         (expression (subscript 42 27))
         (expression (assign (subscript 42 (name a~2 `int`)) (name a~2 `int`))))))

----- stderr -----
