panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__deref__test_deref_void_ptr.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/deref/test_deref_void_ptr.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/deref/test_deref_void_ptr.c"
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (declaration x~2 `int` 42)
         (declaration p~3 `ptr<void>` (addressof (name x~2 `int`)))
         (expression (deref (name p~3 `ptr<void>`))))))

----- stderr -----
